# PyIonoSeis

./: .codespell  .gitignore  404.html  LICENSE  README.md  TECH_DEBT_TODO.md  index.html  mkdocs.yml  model.md  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: commit-message-instructions.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: release_debt_triage.md
.github/instructions/: docs-and-versioning.instructions.md  notebooks.instructions.md  physics-modules.instructions.md  testing.instructions.md
.github/workflows/: docs-build.yml  docs.yml  installation.yml  macos.yml  ubuntu.yml  windows.yml
changelog/: index.html
common/: index.html
continuity/: index.html
contributing/: index.html
docs/: changelog.md  common.md  continuity.md  contributing.md  index.md  installation.md  model.md  tec.md  usage.md  wasp3d-wavevector.md  wavevector.md
docs/javascripts/: mathjax.js  mermaid.js
example/: atmosphere_model.ipynb  event.toml  make_3d_grid.ipynb  make_atmosphere_model.ipynb
examples/intro/: index.html
faq/: index.html
installation/: index.html
javascripts/: mathjax.js
model/: index.html
pyionoseis/: __init__.py  atmosphere.py  checkpoint_io.py  continuity.py  continuity_orchestrator.py  grid_enrichment_orchestrator.py  igrf.py  index.html  infraga.py  ionosphere.py  model.py  model_io.py  model_plot.py  ray_tracing_orchestrator.py  source.py  tec.py  tec_input_resolver.py  tec_io.py  tec_orchestrator.py  tests_runner.py  wavevector.py
scripts/: run_tests.py
search/: search_index.json
tec/: index.html
tests/: test_continuity.py  test_infraga.py  test_model_checkpoint.py  test_model_orchestrator.py  test_model_tec_legacy.py  test_pyionoseis.py  test_source.py  test_tec.py  test_tec_io.py  test_wavevector.py
usage/: index.html
wasp3d-wavevector/: index.html
wavevector/: index.html
