[project]
name = "pyionoseis"
version = "0.0.1"
dependencies = [
    "numpy",
    "toml",
    "cartopy",
    "click",
    "msise00",
    "iri2020 @ git+https://github.com/space-physics/iri2020.git",
    "ppigrf",
    "xarray",
]
description = "A python package for modeling and anlaysis of coseismic ionospheric disturbances"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "pyionoseis",
]
license = {text = "MIT License"}
authors = [
  {name = "Dylan Mikesell", email = "dylan.mikesell@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    # "Programming Language :: Python :: 3.8",
    # "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
pyionoseis = "pyionoseis.cli:main"
pyionoseis-test = "pyionoseis.tests_runner:main"

[project.optional-dependencies]
all = [
    "pyionoseis[extra,infraga,wavevector,dev,test]",
]

extra = [
    "cartopy",
    "pandas",
    "plotly",
]

infraga = [
    "infraga @ git+https://github.com/LANL-Seismoacoustics/infraGA.git",
]

wavevector = [
    "scipy",
]

dev = [
    "black",
    "black[jupyter]",
    "build",
    "bump-my-version",
    "codespell",
    "wheel",
    "flake8",
    "twine",
    "click",
    "pytest",
    "pytest-runner",
    "ipykernel",
    "livereload",
    "nbconvert",
    "nbformat",
    "sphinx",
    "watchdog",
    "mkdocs",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-material>=9.1.3",
    "mkdocs-pdf-export-plugin",
    "mkdocstrings",
    "mkdocstrings-crystal",
    "mkdocstrings-python-legacy",
    "pygments",
    "pymdown-extensions",
]

test = [
    "pytest",
    "pytest-runner",
]


[tool]
[tool.setuptools.packages.find]
include = ["pyionoseis*", "tests*"]
exclude = ["docs*"]


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyionoseis/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/dylanmikesell/pyionoseis"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
